2.3.4
[fix] Game titles UnicodeEncodeError

2.3.3
[fix] Description template UnicodeDecodeError
[chg] Use unicode punctuation space in description template

2.3.2
[fix] py3 encoding issues

2.3.1
[fix] i18n UnicodeEncodeError

2.3.0
[chg] refactor complex entry points
[upd] Python 3 compat.

2.2.4
[fix] VOD's error 404

2.2.3
[add] Thumbnail size, Settings - General
[fix] encoding and replace in clean_title_value
[fix] unplayable videos on some systems, set curl opt verifypeer=false on playback urls

2.2.2
[add] refresh item to streams search when there are no results
[upd] close chat on playback stopped [ccope]
[upd] service start parameter to login

2.2.1
[add] allow Adaptive as default quality

2.2.0
[add] Search history
[add] Settings - Maintenance
[fix] VodCast highlighting

2.1.1
[fix] video default qualities
[fix] setContentLookup AttributeError

2.1.0
[chg] string paths
[fix] required changes for script.module.python.twitch v2.0.0 refactor
[fix] multiple reconnections to same stream
[upd] don't show watched marks for streams
[upd] leave api logging to script.module.python.twitch
[add] channel_name to play route, can use channel_id or channel_name
[add] inputstream.adaptive support for inputstream.adaptive versions >= 2.0.10
[add] Revoke token
[add] Update token route
[add] Reset cache on Refresh to Settings -> Cache
[add] notify at start and group notifications at start to live notification settings
[add] logo and game to live notifications
[add] Hebrew strings [Eng2Heb]

2.0.2
[fix/upd] use display names for communities

2.0.1
[fix] only open chat for live streams
[fix] notify to retry if goo.gl url shortening fails for authentication
[fix] check for game value before adding Goto Game context menu
[fix] blacklist filter excluding unset game
[fix] use same quality on stream reconnection
[fix] do not ask for search query on '..'
[fix] remake cache path on clear
[fix/upd] cache static menus to disk
[fix/upd] pagination to Followed Games