@@ -1,5 +1,6 @@
 2.3.4
 [fix] Game titles UnicodeEncodeError
+[fix] python 3 compat. urllib.quote_plus
 
 2.3.3
 [fix] Description template UnicodeDecodeError
